color scheme updated to emuflight colors

--- a/_sass/color_schemes/emuflight.scss
+++ b/_sass/color_schemes/emuflight.scss
@@ -1,3 +1,4 @@
+
 $body-background-color: $grey-dk-300;
 $sidebar-color: $grey-dk-300;
 $border-color: $grey-dk-200;
@@ -7,7 +8,7 @@ $body-heading-color: $grey-lt-000;
 $nav-child-link-color: $grey-dk-000;
 $search-result-preview-color: $grey-dk-000;
 
-$link-color: $green-000;
+$link-color: $emu-blue-000;
 $btn-primary-color: $emu-blue-200;
 $base-button-color: $grey-dk-250;
 
@@ -15,3 +16,8 @@ $code-background-color: $grey-dk-250;
 $search-background-color: $grey-dk-250;
 $table-background-color: $grey-dk-250;
 $feedback-color: darken($sidebar-color, 3%);
+
+// $emu-blue-000: #23c0fc !default;
+// $emu-blue-100: #00a2e0 !default;
+// $emu-blue-200: #00729d !default;
+// $emu-blue-300: #005a7c !default;
