--- a/_sass/support/_variables.scss
+++ b/_sass/support/_variables.scss
@@ -60,15 +60,15 @@ $emu-blue-100: #00a2e0 !default;
 $emu-blue-200: #00729d !default;
 $emu-blue-300: #005a7c !default;
 
-$emu-yellow-000: #23c0fc !default;
-$emu-yellow-100: #00a2e0 !default;
-$emu-yellow-200: #00729d !default;
-$emu-yellow-300: #005a7c !default;
+$emu-yellow-000: #FFBD1A !default;
+$emu-yellow-100: #FFB600 !default;
+$emu-yellow-200: #FBB300 !default;
+$emu-yellow-300: #C68D00 !default;
 
-$emu-grey-000: #23c0fc !default;
-$emu-grey-100: #00a2e0 !default;
-$emu-grey-200: #00729d !default;
-$emu-grey-300: #005a7c !default;
+$emu-grey-000: #7B7676 !default;
+$emu-grey-100: #464343 !default;
+$emu-grey-200: #140E0C !default;
+$emu-grey-300: #0D0C0C !default;
 
 $green-000: #41d693 !default;
 $green-100: #11b584 !default;
