--- a/_sass/color_schemes/emuflight.scss
+++ b/_sass/color_schemes/emuflight.scss
@@ -7,7 +7,7 @@ $body-heading-color: $grey-lt-000;
 $nav-child-link-color: $grey-dk-000;
 $search-result-preview-color: $grey-dk-000;
 
-$link-color: $green-000;
+$link-color: $emu-blue-000;
 $btn-primary-color: $emu-blue-200;
 $base-button-color: $grey-dk-250;
 
